type 추가
- ko(한국어), en(영어), number(숫자), mix(혼합)