@@ -3,16 +3,18 @@ package IDMaker.project.test;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
+import java.util.Set;
 import java.util.stream.IntStream;
 
 import org.junit.jupiter.api.RepeatedTest;
 import org.junit.jupiter.api.Test;
 
-import IDMaker.project.sample.entity.TestClass;
-import IDMaker.project.sample.service.TestClassService;
+import IDMaker.project.annotation.GenerationType;
+import IDMaker.project.fixture.entity.TestClass;
+import IDMaker.project.fixture.service.TestClassService;
 import IDMaker.project.util.IDMakerUtils;
 
 import org.apache.commons.lang3.StringUtils;
@@ -32,12 +34,40 @@ class IDMakerTest {
 		assertEquals(27, testObject.getIdField().length());
 	}
 
+	@Test
+	void testGenerateKoreanID() {
+		String id = IDMakerUtils.createTimestampedRandomID(10, GenerationType.KO);
+		String randomPart = id.substring(17);
+		assertTrue(randomPart.matches("[가-힣]+"));
+	}
+
+	@Test
+	void testGenerateEnglishID() {
+		String id = IDMakerUtils.createTimestampedRandomID(10, GenerationType.EN);
+		String randomPart = id.substring(17);
+		assertTrue(randomPart.matches("[a-zA-Z]+"));
+	}
+
+	@Test
+	void testGenerateNumberID() {
+		String id = IDMakerUtils.createTimestampedRandomID(10, GenerationType.NUMBER);
+		String randomPart = id.substring(17);
+		assertTrue(randomPart.matches("[0-9]+"));
+	}
+
+	@Test
+	void testGenerateMixedID() {
+		String id = IDMakerUtils.createTimestampedRandomID(10, GenerationType.MIX);
+		String randomPart = id.substring(17);
+		assertTrue(randomPart.matches("[가-힣a-zA-Z0-9]+"));
+	}
+
 	@RepeatedTest(30)
 	void testIDConsistsOfADateAndString() {
 		Random random = new Random();
 		int randomLength = random.nextInt(20) + 1;
 
-		String id = IDMakerUtils.createTimestampedRandomID(randomLength);
+		String id = IDMakerUtils.createTimestampedRandomID(randomLength, GenerationType.EN);
 		String date = id.substring(0, 17);
 		String randomString = id.substring(17);
 
@@ -68,11 +98,21 @@ class IDMakerTest {
 
 		List<String> ids = testObjects.stream()
 			.map(TestClass::getIdField)
-			.collect(Collectors.toList());
+			.toList();
 
 		List<String> sortedIds = new ArrayList<>(ids);
 		sortedIds.sort(String::compareTo);
 
 		assertEquals(ids, sortedIds);
+	}
+
+	@Test
+	void testNoDuplicateIDs() {
+		Set<String> ids = new HashSet<>();
+		for (int i = 0; i < 1_000_000; i++) {
+			String id = IDMakerUtils.createTimestampedRandomID(10, GenerationType.EN);
+			ids.add(id);
+		}
+		assertEquals(1_000_000, ids.size());
 	}
 }
